<resources>
    <string name="app_name">A4 Notes - t37xia</string>
    <string name="show_archived">Show Archived?</string>
    <string name="add_sign">+</string>
    <string name="archive">A</string>
    <string name="delete">D</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="important">Important</string>
    <string name="archived">Archived</string>
    <string name="create">CREATE</string>
    <string name="urgency">Urgency:</string>
</resources>