<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/note_container"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
            android:id="@+id/note_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/A_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:maxLines="1"
            android:textStyle="bold"
            android:textSize="16sp"
            android:hint="@string/title"/>
    <TextView
            android:id="@+id/note_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/note_title"
            app:layout_constraintEnd_toStartOf="@+id/A_button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:maxLines="2"
            android:textSize="16sp"
            android:hint="@string/content"/>
    <Button
            android:id="@+id/A_button"
            android:text="@string/archive"
            android:layout_width="55dp"
            android:layout_height="40dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:layout_constraintEnd_toStartOf="@+id/D_button"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck"/>
    <Button
            android:id="@+id/D_button"
            android:text="@string/delete"
            android:layout_width="55dp"
            android:layout_height="40dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck"/>
</androidx.constraintlayout.widget.ConstraintLayout>